Library and book: memory management by checking available RAM
Until recently, the main way to manage the memory was to set
'--minmapsize', but for that the user needed to know/worry-about the size
of the arrays. So a feature was added to read the available space on RAM
before every allocation. However, in Linux, there is no system call for
this, so we have to read from a file and this made some programs (which
just need to allocate very small arrays) very slow.

With this commit, things have been cleaned up into modular functions (some
of them new) to help in the management. Now, the available memory is only
checked when we array to allocate is larger than 10MB. Also the "Memory
management" section of the book has been updated to be more clear.

--- a/NEWS
+++ b/NEWS
@@ -106,6 +106,9 @@ See the end of the file for license conditions.
    - gal_blank_remove_rows: remove all rows that have at least one blank.
    - gal_fits_hdu_datasum: calculate DATASUM of given HDU in given FITS file.
    - gal_fits_hdu_datasum_ptr: calculate DATASUM of opened FITS file pointer.
+   - gal_pointer_allocate_ram_or_mmap: allocate space either in RAM or as a
+     memory-mapped file.
+   - gal_pointer_mmap_free: "free" (actually delete) the memory-mapped file.
    - gal_wcs_coverage: Return the sky coverage of given image HDU.
    - gal_wcs_dimension_name: return the name of the requested WCS dim.
 
@@ -136,6 +139,10 @@ See the end of the file for license conditions.
      delimiters ('_:_:_').
 
   Library:
+   - gal_pointer_mmap_allocate: new name for 'gal_pointer_allocate_mmap'.
+   - gal_threads_dist_in_threads: now accounts for billions of threads,
+     thus includes memory management options.
+   - gal_threads_spin_off: now accounts for memory management.
    - gal_units_degree_to_ra: new 'usecolon' argument to optionally format
      output string with colons as delimiters ('_:_:_'). When this option is
      zero, the string will be in the '_h_m_s' format.
