wcsdistortion.h library: fixed compiler warnings
Until now, some of the FITS header keywords that were read/parsed were
mistakenly reading/writing numbers with 'size_t' type as '%ld'. We hadn't
noticed this until now, because on 64-bit systems, 'size_t' is an unsigned
long type so the compiler wouldn't complain. However, on some 32-bit
systems, 'size_t' translates to unsigned integer, and this caused compiler
warnings.

With this commit, the general printing format for 'size_t' ('%zu') is used
to fix that problem. According to the C99 standard, %zu will evaluate to
integer or long based on the host system and should save us from having to
add checks.

Also, after making this correction, I noticed that GCC is complaining about
writing 'size_t' values into the very limited (8 or 9 byte) literal string!
So I just expanded the space in each literal string to 50 bytes instead,
which fixed the warnings. In practice only or 8 or 9 bytes will be needed
(since we never have more than 10 or 20 distortion coefficients, and any
number below 20 are at maximum two characters/bytes). But well, the "smart"
compilers don't know this, so they also worry about not being able to write
the largest possible 'size_t' value (18446744073709551615, which is 20
characters/bytes) and print warnings!

This issue was reported by Francois Ochsenbein.

--- a/THANKS
+++ b/THANKS
@@ -71,6 +71,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Bob Proulx                           bob@proulx.com
     Joseph Putko                         josephputko@gmail.com
     Samane Raji                          samaneraji@gmail.com
+    Francois Ochsenbein                  francois.ochsenbein@gmail.com
     Teymoor Saifollahi                   teymur.saif@gmail.com
     Joanna Sakowska                      js01093@surrey.ac.uk
     Elham Saremi                         saremi@ipm.ir
